Mise à jour du backend et du frontend avec corrections des statistiques et des formats